kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello
  labels:
    app: hello
  namespace: jirayu
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: hello
