kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    # ingress.kubernetes.io/rewrite-target: /
  labels:
    app: hello
  name: hello
  namespace: jirayu
spec:
  rules:
  - host: hello.api
    http:
      paths:
      - path: /
        backend:
          serviceName: hello
          servicePort: 80
